third semester(fall 2023)/OOP 244/ws6/Workshop 6/errors.txt
HealthCard.cpp: In member function ‘void sdds::HealthCard::extractChar(std::istream&, char) const’:
HealthCard.cpp:53:13: error: assignment of member ‘sdds::HealthCard::m_name’ in read-only object
      m_name = nullptr;
             ^
